Solved 71 - simplify path

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -65,6 +65,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simplifyPath(path: str) -> str:\n",
+    "        dirs = path.split(\"/\")\n",
+    "        print(f\"dirs = {dirs}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dirs = ['', 'home', '']\n",
+      "dirs = ['', 'home', '', 'foo', '']\n",
+      "dirs = ['', 'home', 'user', 'Documents', '..', 'Pictures']\n",
+      "dirs = ['', '..', '']\n",
+      "dirs = ['', '...', 'a', '..', 'b', 'c', '..', 'd', '.', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "simplifyPath(\"/home/\")\n",
+    "simplifyPath(\"/home//foo/\")\n",
+    "simplifyPath(\"/home/user/Documents/../Pictures\")\n",
+    "simplifyPath(\"/../\")\n",
+    "simplifyPath(\"/.../a/../b/c/../d/./\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
